Fixed Overflow issue Added decrypt functionality Fixed new line being omitted

--- a/css/style.css
+++ b/css/style.css
@@ -82,6 +82,7 @@ input[type="radio"]
     box-shadow: 2px 7px 7px rgba(0, 0, 0, 0.2);
     padding: 10px;
     background-color: white;
+    overflow: auto;
 }
 textarea {
     font-size: 20px;
